src/objects/MemberPlan.object
<CustomObject>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider_Name__c</fullName>
        <label>Insurance Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Card_Config_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Card Config Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_MemberPlans</fullName>
        <filterScope>Everything</filterScope>
        <label>All Member Plans</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>